//
//  Constants.swift
//  Musica
//
//  Created by Arslan Asim on 11/06/2019.
//  Copyright © 2019 Arslan Asim. All rights reserved.
//

import UIKit

struct Segues {
    static let artistSearchToAlbums = "artistSearchToAlbums"
    static let albumsListToDetails = "albumsListToDetails"
    static let mainPageToDetails = "mainPageToDetails"
    static let mainPageToSearch = "mainPageToSearch"
}
struct AccessibilityIdentifiers {
    static let storedAlbumView = "Stored Album View"
    static let searchArtistView = "search Artist View"
    static let pointerView = "Pointer View"
    static let collectionView = "collectionView"
    static let artistSearchTableView = "artistSearchTableView"
    static let artTableViewCell = "artTableViewCell"
    static let albumListView = "albumListView"
    static let albumListTableView = "albumListTableView"
    static let albumDetailsView = "albumDetailsView"
    static let albumDetailsTableView = "albumDetailsTableView"
    static let albumDetailsHeartIcon = "albumDetailsHeartIcon"
}
