...
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="QTy-sF-xgk">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QKa-i3-fWO" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="sZl-VO-xNq">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="navigationBar"/>
                        </userDefinedRuntimeAttributes>
                    </navigationBar>
...
